--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ h1, h2, h3, h4, h5, h6, p {
     height: 100%;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
 }
 
 .person-outer {
@@ -44,7 +44,7 @@ h1, h2, h3, h4, h5, h6, p {
 .person-inner {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     height: 300px;
     margin: 0 50px;
 }
@@ -109,6 +109,7 @@ h1, h2, h3, h4, h5, h6, p {
     height: 140px;
     left: 30px;
     background-image: url('mother.jpg');
+    background-size: contain;
 }
 
 .person:hover .person-icon {
